--- a/public/css/mapjs-default-styles.css
+++ b/public/css/mapjs-default-styles.css
@@ -1,3 +1,32 @@
+body {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
+.mapjs-container {
+	background-color: #FFFFFF;
+	height: 100%;
+	width: 100%;
+}
+
+.mapjs-container.loader {
+	background-position: center 50%;
+	background-repeat: no-repeat;
+	background-image: url('loader.gif');
+}
+
+.mapjs-context-menu {
+	position: absolute;
+	width:200px;
+	border: 1px solid red;
+	border-radius: 8px;
+	padding: 10px;
+	background-color: rgba(0,0,0,0.4);
+	z-index: 10;
+	display: none;
+}
+
 .mapjs-node {
 	margin: 0;
 	padding: 7px;
@@ -138,3 +167,5 @@
 .mapjs-reorder-bounds[mapjs-edge="top"] {
 	transform: rotate(-90deg);
 }
+
+
