--- a/public/css/mapjs.css
+++ b/public/css/mapjs.css
@@ -256,6 +256,26 @@ body {
 	outline: none;
 }
 
+.doctor-panel .doctor {
+    background-image: url('logout.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+	background-position: bottom;
+    width:50px;
+    height: 50px;
+    position: relative;
+    cursor: pointer;
+	margin-left: 15px;
+	margin-top: 30px;
+}
+
+.doctor-panel .doctor a {
+	display: inline-block;
+	width:50px;
+	height:50px;
+}
+
+
 @media (max-width: 500px) {
 	.mapjs-context-menu {
 		width: 170px;
