--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,7 +154,7 @@ body.doctor {
     display: none;
 }
 
-.doctor td.attr label {
+.doctor td.attr label.gender {
     display: inline-block;
     width: 30px;
     height: 30px;
@@ -187,6 +187,7 @@ body.doctor {
     top: -10px;
     margin-left: 5px;
     width: 50px;
+    height: 28px;
 }
 
 .doctor div.plus {
@@ -230,6 +231,68 @@ body.doctor {
     top: 8px;
 }
 
+.doctor td.interviews div.share {
+    display: inline-block;
+    background-image: url('share.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width:25px;
+    height:25px;
+    cursor: pointer;
+    position: relative;
+    margin-left: 10px;
+    top: 6px;
+}
+
+
+.doctor .patients .attr label.notifications {
+    background-color: #e9ecee;
+    border: 1px solid #4ea1ff;
+    padding: 4px;
+    width: 18px;
+    height: 18px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+    border-radius: 0.4em;
+    display: inline-block;
+    position: relative;
+    top: -1px;
+    margin-left:6px;
+    cursor: pointer;
+}
+
+.doctor .patients .attr input.notifications:checked+label:after {
+    content: '\2714';
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    color: #4ea1ff;
+    font-size: 14px;
+}
+
+.doctor .patients .interviews input.share{
+    width: 100%;
+    font-family: Tahoma;
+    font-size: 12px;
+    padding:10px;
+    padding-right: 30px;
+    border-radius: 10px;
+    border: 1px solid #4ea1ff;
+    outline: none;
+    display: none;
+    background-image: url('share.svg');
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: right 6px top 6px;
+}
+
+.doctor .patients .interviews div.share-wraper{
+    display: none;
+    position: absolute;
+    right:5px;
+    width:30px;
+    height: 30px;
+    cursor: pointer;
+}
 
 @media (max-width: 500px) {
 	.login .login-panel,
@@ -244,6 +307,7 @@ body.doctor {
         margin-top: 110px;
     }
 }
+
 
 @media (max-width: 1400px) {
     body.doctor {
