--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,18 +131,21 @@ body.doctor {
 }
 
 .doctor .patients tr.odd,
-.doctor tr.odd .patient-name input{
+.doctor tr.odd .patient-name input,
+.doctor tr.odd .patient-nick input{
     background-color: #e8e8e8;
 }
 
 .doctor .patients tr.even,
-.doctor tr.even .patient-name input {
+.doctor tr.even .patient-name input,
+.doctor tr.even .patient-nick input{
     background-color: #f0f0f0;
 }
 
 
 
-.doctor .patient-name input {
+.doctor .patient-name input,
+.doctor .patient-nick input {
     width: 100%;
     border: 0;
     outline: none;
