--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,6 +128,7 @@ body.doctor {
 
 .doctor .dataTables_wrapper {
     margin-top: 230px;
+    margin-bottom: 80px;
 }
 
 .doctor .patients tr.odd,
@@ -214,6 +215,39 @@ body.doctor {
     position: fixed;
     top:20px;
     right: 30px;
+    cursor: pointer;
+}
+
+.doctor div.save {
+    background-image: url('save.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width:50px;
+    height: 50px;
+    position: fixed;
+    top:20px;
+    left: 90px;
+    cursor: pointer;
+}
+
+.doctor #file-input {
+    width: 0.1px;
+    height: 0.1px;
+    position: fixed;
+    top:20px;
+    left: 10px;
+    outline: none;
+}
+
+.doctor label.open {
+    background-image: url('open.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width:50px;
+    height: 50px;
+    position: fixed;
+    top:20px;
+    left: 20px;
     cursor: pointer;
 }
 
